--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -7,10 +7,41 @@ services:
       - app-postgres-db:app-postgres-db
     ports:
       - 80:80
+    environment:
+      - UploadUrl=Uploads
+      - BackendRoot=https://localhost
+      - DefConnStr=SERVER=app-postgres-db;User ID=postgres;Password=p@ssw0rd;Port=5432;database=appdb;
 
   app-postgres-db:
     image: sampleforsuperset/postgre-sql
     volumes:
       - DB:/var/lib/pgsql/data/
+    ports:
+      - 5432:5432
+    networks:
+      - pg-net
+
+  superset:
+    image: sampleforsuperset/superset
+    ports:
+      - 4200:8088
+
+  pgadmin:
+    image: sampleforsuperset/pgadmin4
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    ports:
+      - 5050:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: postgres@pg.com
+      PGADMIN_DEFAULT_PASSWORD: xxx
+    depends_on:
+      - app-postgres-db
+    networks:
+      - pg-net
+
 volumes:
   DB:
+  pgadmin-data:
+networks:
+  pg-net:
