--- a/src/SampleForSuperset/Tests/SampleForSuperset.Tests.csproj
+++ b/src/SampleForSuperset/Tests/SampleForSuperset.Tests.csproj
@@ -1,19 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <Configurations>Debug;Release</Configurations>
     <LangVersion>latest</LangVersion>
     <RootNamespace>IIS.SampleForSuperset</RootNamespace>
-    <AssemblyName>SampleForSuperset.Objects</AssemblyName>
+    <AssemblyName>SampleForSuperset.Tests</AssemblyName>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <XunitStartupFullName>IIS.SampleForSuperset.Startup</XunitStartupFullName>
   </PropertyGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0"></PackageReference>
+  </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NewPlatform.Flexberry.StyleCopRuleset" Version="1.0.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.ORM" Version="6.0.0"></PackageReference>
+    <PackageReference Include="Moq" Version="4.18.2"></PackageReference>
+    <PackageReference Include="xunit" Version="2.4.2"></PackageReference>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5"></PackageReference>
+    <PackageReference Include="NewPlatform.Flexberry.ORM.PostgresDataService" Version="6.0.0"></PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Objects\SampleForSuperset.Objects.csproj"></ProjectReference>
+  </ItemGroup>
 </Project>
