--- a/src/Docker/docker-compose.yml
+++ b/src/Docker/docker-compose.yml
@@ -40,8 +40,18 @@ services:
     networks:
       - pg-net
 
+  audit-db:
+    image: sampleforsuperset/clickhouse
+    command: gosu clickhouse:clickhouse sh -c ' while :; do /usr/bin/clickhouse-server --config-file=/etc/clickhouse-server/config.xml; sleep 1; done'
+    volumes:
+      - clickhousedb:/var/lib/clickhouse
+    ports:
+      - 8123:8123
+      - 9000:9000
+
 volumes:
   DB:
   pgadmin-data:
+  clickhousedb:
 networks:
   pg-net:
