--- a/src/SampleForSuperset/ODataBackend/SampleForSuperset.ODataBackend.csproj
+++ b/src/SampleForSuperset/ODataBackend/SampleForSuperset.ODataBackend.csproj
@@ -12,11 +12,15 @@
     <None Update="appsettings.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NewPlatform.Flexberry.Audit" Version="4.1.0-beta01" />
+    <PackageReference Include="NewPlatform.Flexberry.AuditBigData" Version="1.0.0-rc04" />
+    <PackageReference Include="NewPlatform.Flexberry.AuditBigData.Serialization.Json" Version="1.0.0-rc04" />
+    <PackageReference Include="NewPlatform.Flexberry.ORM.ClickHouseDataService" Version="6.0.0-beta02" />
     <PackageReference Include="NewPlatform.Flexberry.StyleCopRuleset" Version="1.0.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.ORM.ODataService" Version="6.1.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.LockService" Version="3.0.0"></PackageReference>
     <PackageReference Include="NewPlatform.Flexberry.LogService.Objects" Version="4.0.0"></PackageReference>
-    <PackageReference Include="NewPlatform.Flexberry.ORM.PostgresDataService" Version="6.0.0"></PackageReference>
+    <PackageReference Include="NewPlatform.Flexberry.ORM.PostgresDataService" Version="6.1.0-beta05"></PackageReference>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0"></PackageReference>
     <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="6.0.2"></PackageReference>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9"></PackageReference>
