--- a/src/SampleForSuperset/ODataBackend/appsettings.json
+++ b/src/SampleForSuperset/ODataBackend/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuditConnString": "Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=audit-db;Port=9000;Database=default;User=default;Password=P@ssw0rd;"
+  }
 }
