--- a/src/SampleForSuperset/ODataBackend/SampleForSuperset.ODataBackend.csproj
+++ b/src/SampleForSuperset/ODataBackend/SampleForSuperset.ODataBackend.csproj
@@ -12,6 +12,7 @@
     <None Update="appsettings.json"><CopyToOutputDirectory>Always</CopyToOutputDirectory></None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
     <PackageReference Include="NewPlatform.Flexberry.Audit" Version="4.1.0-beta01" />
     <PackageReference Include="NewPlatform.Flexberry.AuditBigData" Version="1.0.0-rc04" />
     <PackageReference Include="NewPlatform.Flexberry.AuditBigData.Serialization.Json" Version="1.0.0-rc04" />
