--- a/src/SampleForSuperset/ODataBackend/appsettings.Docker.json
+++ b/src/SampleForSuperset/ODataBackend/appsettings.Docker.json
@@ -1,7 +1,7 @@
 ﻿{
   "UploadUrl": "Uploads",
   "BackendRoot": "http://localhost",
-  "DefConnStr": "SERVER=localhost;User ID=flexberryuser;Password=jhv;Port=5432;database=appdb;",
+  "DefConnStr": "SERVER=app-postgres-db;User ID=flexberryuser;Password=jhv;Port=5432;database=appdb;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuditConnString": "Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=localhost;Port=9000;Database=default;User=default;Password=P@ssw0rd;"
+    "AuditConnString": "Compress=True;CheckCompressedHash=True;Compressor=lz4;Host=audit-db;Port=9000;Database=default;User=default;Password=P@ssw0rd;"
   }
 }
