--- a/src/Docker/SQL/Dockerfile.PostgreSql
+++ b/src/Docker/SQL/Dockerfile.PostgreSql
@@ -1,3 +1,8 @@
 FROM postgres:11.16
-ENV POSTGRES_PASSWORD password
-COPY CreateDatabaseInDocker/* /docker-entrypoint-initdb.d/
+
+ENV POSTGRES_USER flexberryuser
+ENV POSTGRES_PASSWORD jhv
+ENV POSTGRES_DB appdb
+
+COPY PostgreSql.create.sql /docker-entrypoint-initdb.d/
+COPY PostgreSql.insert.sql /docker-entrypoint-initdb.d/
